update index html

--- a/templates/index-website-1.html.j2
+++ b/templates/index-website-1.html.j2
@@ -54,13 +54,10 @@
 
         <table>
         <tr><td>
-            <img style="width:300px;" src="ingram_micro.png"/>
-        </td></tr>
-        <tr><td>
             <div style="color:grey;" class="arial_20">
-                Ingram Micro New Zealand is delighted to provide</br>
-                Ansible Workshops to your company. Contact us now!
+                We can provide Ansible Workshops to your company. Contact us now!
                 </br></br>
+                <img style="width:700px;" src="ansible-workshop.png"/>
             </div>
         </td></tr>
         </table>
