--- a/templates/index-website-2.html.j2
+++ b/templates/index-website-2.html.j2
@@ -79,20 +79,9 @@
         <table style="width:800px;border: 0px solid black;">
         <tr>
             <td>
-                <div style="text-align:center;">
-                    <img style="width:700px;" src="ingram_micro_trans.png"/></br>
-                    </br>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>
                 <div style="color:grey;text-align:center;font-weight:bold;" class="arial_20">
-                    Ingram Micro New Zealand is delighted to provide</br> 
-                    Ansible Workshops to your company</br>
-                    </br>
-                    Contact us now!</br>
-                    </br>
+                    We can provide Ansible Workshops to your company. Contact us now!
+                    </br></br>
                     <img style="width:700px;" src="ansible-workshop.png"/>
                     </br>
                 </div>
